--- a/views/products.hbs
+++ b/views/products.hbs
@@ -66,6 +66,21 @@
             <h2 class="header">Все товары:</h2>
         </div>
     </div>
+    <form method="post" action="">
+<!--        <div class="form-group">-->
+<!--            <label for="exampleFormControlInput1">Цена до</label>-->
+<!--            <input type="number" class="form-control" id="exampleFormControlInput1" name="price">-->
+<!--        </div>-->
+        <div class="form-group">
+            <label for="exampleFormControlSelect1">Выбрать категорию</label>
+            <select class="form-control" id="exampleFormControlSelect1" name="category">
+                {{#each categories}}
+                    <option value="{{this.id}}">{{this.name}}</option>
+                {{/each}}
+            </select>
+        </div>
+        <button type="submit" class="btn btn-primary">Фильтр</button>
+    </form>
     <div class="row row-cols-1 row-cols-md-3 center">
     {{#each products}}
         <form method="post" action="/add">
